Handle non-existent module-path with ALL-MODULE-PATH